--- a/dark-crows/index.html
+++ b/dark-crows/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="h-full w-full">
     <br>
-    <div id="root" class="w-full h-full p-5 flex flex-row justify-center"></div>
+    <div id="root" class="w-full h-full p-5 flex flex-row justify-center border-2"></div>
 
 
 
