--- a/dark-crows/index.html
+++ b/dark-crows/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     
-    <div id="root"></div>
+    <div id="root" class="h-full w-full"></div>
 <script type="module" src="/src/main.jsx"></script>
 <script
 src="https://maps.googleapis.com/maps/api/js?/key=AIzaSyBT95U23oIDLedBt74OEI9UnrGagPR_e_M&callback=initMap&libraries=&v=weekly"
